Fix the bug on mobile phone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,13 +158,7 @@ body {
     margin-top: 5%;
 }
 
-#wrapper{
-    text-align: center;
-}
-#wrapper .end-screen, .rules-screen{
-    display: inline-block;
-    display: inline;
-}
+
 
 /* Add Media Queries */
 @media only screen and (max-width: 770px) {
